# solana

Ticket2Me/contracts/: Ticket2Me.c  Ticket2Me.h  makefile
c_rpc/: Base58.h  CMakeCache.txt  CMakeLists.txt  Deploy.md  Hello  Hello.cpp  Hello.h  MESSAGE (HEX)  Makefile  Quicksort.cpp  Quicksort.h  README.md  Solana-C-RPC.cbp  cmake_install.cmake  main.cpp  main.qml  qml.qrc  qrc_qml.cpp  solanaRpc.cpp  solanaRpc.h
c_rpc/Hello_autogen/: moc_predefs.h  mocs_compilation.cpp
c_rpc/Hello_autogen/EWIEGA46WW/: moc_Hello.cpp  moc_Hello.cpp.d  moc_solanaRpc.cpp  moc_solanaRpc.cpp.d
c_rpc/ed25519/: ed25519.h  sign.c
docker/: run_solana_docker.sh
scripts/: addd_money.sh  build_c_example.sh  create_wallet.sh  prepare_env.sh  recover_wallet.sh  transfer.sh
